Changes in config.

--- a/Self.GroupInsurance.Web/Views/Home/Index.cshtml
+++ b/Self.GroupInsurance.Web/Views/Home/Index.cshtml
@@ -8,5 +8,5 @@
 </div>
 
 <p>
-    <a asp-action="~/Employee/Index">View Employee Listing</a>
+    <a href="~/Employee/Index"> View Employee </a>
 </p>
